# manna

./: CMakeLists.txt  Manna.pro  README.md  main.cpp  manna.pro
.github/: FUNDING.yml
cmake/: FindSword.cmake
src/: CMakeLists.txt  api.cpp  api.h  library.cpp  library.h  manna.cpp  manna.h  module.cpp  module.h  module_bible.cpp  module_bible.h  module_generic_book.cpp  module_generic_book.h  server.cpp  server.h
